--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <link rel="stylesheet" type="text/css" href="https://event.kgi.com.tw/news/event/commonResources/css/slick.css" />
         <link href="https://event.kgi.com.tw/news/event/commonResources/css/aos.css" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css" />
-        <link rel="stylesheet" href="css/test.css" />
+        <link rel="stylesheet" href="css/style01.css" />
 
         <!-- google font start -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -243,14 +243,14 @@
                         <div class="time-content">
                             <table>
                                 <tr>
-                                    <td>9:10首次撮合，後續每分鐘以集合競價撮合一次，<span>一天共260次</span>。</td>
+                                    <td>9:10首次撮合，後續每分鐘以集合競價撮合一次，<span>一天共260次。</span></td>
                                     <th>零股<br>撮合時間</th>
-                                    <td>僅在14:30進行集合競價撮合，<span>一天共1次</span>。</td>
+                                    <td>僅在14:30進行集合競價撮合，<span>一天共1次。</span></td>
                                 </tr>
                                 <tr>
-                                    <td>出價較高者零股買入順序優先、出價較低者零股賣出順序優先；<span>同價格時，第一次撮合由電腦隨機選取，隨後以時間先後順序而定</span>。</td>
+                                    <td>出價較高者零股買入順序優先、出價較低者零股賣出順序優先；<span>同價格時，第一次撮合由電腦隨機選取，隨後以時間先後順序而定。</span></td>
                                     <th>零股<br>成交順序</th>
-                                    <td>出價較高者零股買入順序優先、出價較低者零股賣出順序優先；<span>同價格時，均由電腦隨機排序</span>。</td>
+                                    <td>出價較高者零股買入順序優先、出價較低者零股賣出順序優先；<span>同價格時，均由電腦隨機排序。</span></td>
                                 </tr>
                             </table>
                         </div>
@@ -261,7 +261,7 @@
                     <div class="container">
                         <h2 class="tag" title="零股下單要注意！">零股下單要注意！</h2>
                         <h2 class="tit-type1" title="盤中、盤後零股2者異同解析"><span>盤中、盤後</span>零股2者異同解析</h2>
-                        <p>無論是盤中零股下單還是盤後零股下單，皆只能用限價當日有效（ROD）單進行，且盤中盤後零股交易標的均僅限TDR、ETF、股票、受益憑證等，認購／認售權證及ETN不得進行零股交易。
+                        <p>無論是盤中零股下單還是盤後零股下單，皆只能用限價<span>當日有效（ROD）</span>單進行，且盤中盤後零股交易標的均<span>僅限TDR、ETF、股票、受益憑證</span>等，認購／認售權證及ETN不得進行零股交易。
                             對於2種零股交易之間的資訊有點混淆了嗎？此處盤中盤後零股交易的重點凱基一次整理成表格給您看！
                         </p>
                         <div class="titbox">
@@ -272,29 +272,59 @@
                         <div class="time-content">
                             <table>
                                 <tr>
-                                    <th>零股撮合時間</th>
-                                    <td>僅在14:30進行集合競價撮合。</td>
-                                    <td>僅在14:30進行集合競價撮合。</td>
+                                    <th>委託時間</th>
+                                    <td>9:00~13:30</td>
+                                    <td>13:40~14:30</td>
                                 </tr>
                                 <tr>
-                                    <th>零股撮合時間</th>
-                                    <td>僅在14:30進行集合競價撮合。</td>
-                                    <td>僅在14:30進行集合競價撮合。</td>
+                                    <th>掛單方式</th>
+                                    <td colspan="2">
+                                        限價單<br>指定價格的委託單
+                                    </td>
                                 </tr>
                                 <tr>
-                                    <th>零股撮合時間</th>
-                                    <td>僅在14:30進行集合競價撮合。</td>
-                                    <td>僅在14:30進行集合競價撮合。</td>
+                                    <th>競價方式</th>
+                                    <td>
+                                        9:10第一次撮合<br>
+                                        每1分鐘撮合一次
+                                    </td>
+                                    <td>
+                                        盤後14:30<br>
+                                        集合競價撮合一次
+                                    </td>
                                 </tr>
                                 <tr>
-                                    <th>零股撮合時間</th>
-                                    <td>僅在14:30進行集合競價撮合。</td>
-                                    <td>僅在14:30進行集合競價撮合。</td>
+                                    <th>成交順序</th>
+                                    <td>價格優先再依時間</td>
+                                    <td>
+                                        價格優先<br>
+                                        同價位電腦隨機決定
+                                    </td>
                                 </tr>
                                 <tr>
-                                    <th>零股撮合時間</th>
-                                    <td>僅在14:30進行集合競價撮合。</td>
-                                    <td>僅在14:30進行集合競價撮合。</td>
+                                    <th>委託方式</th>
+                                    <td>電子交易</td>
+                                    <td>電子、人工交易</td>
+                                </tr>
+                                <tr>
+                                    <th>資訊揭示</th>
+                                    <td>
+                                        每5秒揭示<br>
+                                        模擬最佳5檔價格
+                                    </td>
+                                    <td>
+                                        14:25~14:30<br>
+                                        每30秒揭示最佳1檔價格
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>手續費</th>
+                                    <td colspan="2">
+                                        <ul>
+                                            <li><span>上市股票</span>成交金額 × 0.1425% × 優惠費率，每筆不足1元時仍以1元計收。</li>
+                                            <li><span>上櫃股票</span>成交金額× 0.1425% × 優惠費率，每筆不足20元時仍以20元計收。</li>
+                                        </ul>
+                                    </td>
                                 </tr>
                             </table>
                         </div>
